[package]
name = "patchfile"
version = "0.1.0"
edition = "2021"
description = "Render a set of diffs into diff -u format, which is compatible with patch."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "^0.12.1"
diff = "^0.1.13"
