[package]
name = "patchfile"
version = "0.2.2"
edition = "2021"
description = "Render a set of diffs into diff -u format, which is compatible with patch."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = "^0.1.13"
termcolor = "^1.1.3"
